@@ -1,5 +1,28 @@
 import py
 
+def test_xfail_not_report_default(testdir):
+    p = testdir.makepyfile(test_one="""
+        import py
+        @py.test.mark.xfail
+        def test_this():
+            assert 0
+    """)
+    result = testdir.runpytest(p, '-v')
+    extra = result.stdout.fnmatch_lines([
+        "*1 expected failures*--report=xfailed*",
+    ])
+
+def test_skip_not_report_default(testdir):
+    p = testdir.makepyfile(test_one="""
+        import py
+        def test_this():
+            py.test.skip("hello")
+    """)
+    result = testdir.runpytest(p, '-v')
+    extra = result.stdout.fnmatch_lines([
+        "*1 skipped*--report=skipped*",
+    ])
+
 def test_xfail_decorator(testdir):
     p = testdir.makepyfile(test_one="""
         import py
@@ -11,7 +34,7 @@ def test_xfail_decorator(testdir):
         def test_that():
             assert 1
     """)
-    result = testdir.runpytest(p)
+    result = testdir.runpytest(p, '--report=xfailed')
     extra = result.stdout.fnmatch_lines([
         "*expected failures*",
         "*test_one.test_this*test_one.py:4*",
@@ -28,7 +51,7 @@ def test_xfail_at_module(testdir):
         def test_intentional_xfail():
             assert 0
     """)
-    result = testdir.runpytest(p)
+    result = testdir.runpytest(p, '--report=xfailed')
     extra = result.stdout.fnmatch_lines([
         "*expected failures*",
         "*test_intentional_xfail*:4*",
@@ -43,7 +66,7 @@ def test_skipif_decorator(testdir):
         def test_that():
             assert 0
     """)
-    result = testdir.runpytest(p)
+    result = testdir.runpytest(p, '--report=skipped')
     extra = result.stdout.fnmatch_lines([
         "*Skipped*platform*",
         "*1 skipped*"
@@ -99,3 +122,60 @@ def test_evalexpression_cls_config_example(testdir):
     x, y = evalexpression(item, 'skipif')
     assert x == 'config._hackxyz'
     assert y == 3
+
+def test_skip_reasons_folding():
+    from _py.test.plugin import pytest_runner as runner 
+    from _py.test.plugin.pytest_skipping import folded_skips
+    class longrepr:
+        class reprcrash:
+            path = 'xyz'
+            lineno = 3
+            message = "justso"
+
+    ev1 = runner.CollectReport(None, None)
+    ev1.when = "execute"
+    ev1.skipped = True
+    ev1.longrepr = longrepr 
+    
+    ev2 = runner.ItemTestReport(None, excinfo=longrepr)
+    ev2.skipped = True
+
+    l = folded_skips([ev1, ev2])
+    assert len(l) == 1
+    num, fspath, lineno, reason = l[0]
+    assert num == 2
+    assert fspath == longrepr.reprcrash.path
+    assert lineno == longrepr.reprcrash.lineno
+    assert reason == longrepr.reprcrash.message
+
+def test_skipped_reasons_functional(testdir):
+    testdir.makepyfile(
+        test_one="""
+            from conftest import doskip
+            def setup_function(func):
+                doskip()
+            def test_func():
+                pass
+            class TestClass:
+                def test_method(self):
+                    doskip()
+       """,
+       test_two = """
+            from conftest import doskip
+            doskip()
+       """,
+       conftest = """
+            import py
+            def doskip():
+                py.test.skip('test')
+        """
+    )
+    result = testdir.runpytest('--report=skipped') 
+    extra = result.stdout.fnmatch_lines([
+        "*test_one.py ss",
+        "*test_two.py S",
+        "___* skipped test summary *_", 
+        "*conftest.py:3: *3* Skipped: 'test'", 
+    ])
+    assert result.ret == 0
+
